# LibraryMS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  libraryms.toml  main.cpp  vcpkg.json
cmake/: copy_file.cmake
common/: CMakeLists.txt
common/include/common/: cstringr.h  logger.h  toml.hpp  utils.h
common/include/common/uitls/: constexpr_string.h  cstringr.h  pipe_operator.h
common/include/common/utils/: local_map.h
common/src/: empty.cpp
framework/: CMakeLists.txt
framework/cmake/: copy_dll.cmake  findMYSQL.cmake  findSOCI.cmake
framework/include/framework/: application.h  result.h  router.h
framework/include/framework/common/: access_assert.h  i_json_serializable.h  runtime_exception.h  types.h
framework/include/framework/entity/: admin.h  book.h  column.h  entity.h  record.h  token.h  type.h  user.h
framework/include/framework/mapper/: admin_mapper.h  book_mapper.h  mapper.h  record_mapper.h  type_mapper.h  user_mapper.h
framework/include/framework/pojo/: filter.h  page.h  page_request.h  sort.h  token.h
framework/include/framework/service/: book_service.h  person_service.h  record_service.h  service.h  type_service.h  user_service.h
framework/src/: application.cpp  empty.cpp  router.cpp
framework/src/service/: person_service.cpp  user_service.cpp
framework/test/: CMakeLists.txt  entity_use_test.cpp  http_server_test.cpp  soci_use_test.cpp
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: config.js  main.js  request.js  router.js
frontend/src/common/: base.css  cache.js  common.css  style.css
frontend/src/components/: DataTableTemplate.vue  FormInput.vue  Header.vue  HelloWorld.vue  LoginInputBox.vue  Navigation.vue  RegisterInputBox.vue
frontend/src/pages/: HelloWorld2.vue  HelloWorld3.vue  LoginPage.vue  MainPage.vue  RegisterPage.vue
frontend/src/pages/admin/: AddAdminPage.vue  AdminTablePage.vue
frontend/src/pages/book/: AddBookPage.vue  BookTablePage.vue
frontend/src/pages/record/: RecordTablePage.vue
frontend/src/pages/type/: AddTypePage.vue  TypeTablePage.vue
frontend/src/pages/user/: AddUserPage.vue  UserTablePage.vue
soci/include/soci/: logger.h  session.h  soci-config.h
soci/lib/: libsoci_mysql_4_1.lib
soci/lib/cmake/SOCI/: SOCITargets-release.cmake  SOCITargets.cmake
